<resources>
    <string name="app_name">Crazy Frog</string>
    <string name="main_title">Welcome!</string>
    <string name="intro_text">to the Crazy Frog World! Here you can find all things Crazy Frog: Facts, songs, a soundboard and even  a live location tracker! Ding Ding!</string>
    <string name="title_songs">Popular Songs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="song_one_link" translatable="false">https://www.youtube.com/watch?v=k85mRPqvMbE</string>
    <string name="song_one">Axel F</string>
    <string name="song_two">In the 80\'s</string>
    <string name="song_two_link" translatable="false">https://www.youtube.com/watch?v=durkwtNgHy8</string>
    <string name="song_three">I like to move it</string>
    <string name="song_three_link" translatable="false">https://www.youtube.com/watch?v=jLPYnw17GTY</string>
    <string name="song_four">The Flash</string>
    <string name="song_four_link" translatable="false">https://www.youtube.com/watch?v=durkwtNgHy8</string>
    <string name="song_five">Jingle Bells</string>
    <string name="song_five_link" translatable="false">https://www.youtube.com/watch?v=DeT8JqNf7zg</string>
    <string name="song_six">Popcorn</string>
    <string name="song_six_link" translatable="false">https://www.youtube.com/watch?v=jwI1j7sslYI</string>
    <string name="link_description">link</string>
    <string name="title_locator">Where\'s that annoying thing?</string>
    <string name="button_locator">locate</string>
    <string name="title_activity_locator">Locator</string>
    <string name="location_preposition">Crazy frog is currently in</string>
    <string name="city_one">New York</string>
    <string name="city_two">London</string>
    <string name="city_three" translatable="false">Kortrijk</string>
    <string name="city_four">Bruges</string>
    <string name="city_five" translatable="false">Vichte</string>
    <string name="title_facts">Quick Facts</string>
    <string name="fact_one">Crazy Frog, originally known as The Annoying Thing,  is a Swedish computer animated  character who creates music.</string>
    <string name="fact_two">The character of Crazy Frog was created  in 2003 by the Swedish animator and  graphic artist Erik Wernquist,  who comes from Stockholm.</string>
    <string name="fact_three">Crazy Frog was most popular in Turkey,  New Zealand, Australia and most of Europe.  After that, he was also successful around the world.</string>
    <string name="fact_four">In 1997, 17-year-old Gothenburg student Daniel Malmedahl recorded himself imitating the noises produced by a two stroke engine. Someone picked it up and created crazy frog by warping these sounds.</string>
    <string name="title_soundboard">Soundboard</string>
    <string name="sound_one" translatable="false">Ding Ding</string>
    <string name="sound_two" translatable="false">Axel F Remix</string>
    <string name="sound_three" translatable="false">Special Frog</string>
</resources>