<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Soundboard">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/button_sound_one"
            android:name="@string/song_one"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/custom_green"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight=".5"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/link_description"
                android:src="@drawable/custom_playbutton"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:fontFamily="@font/roboto_black"
                android:text="@string/sound_one"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_sound_two"
            android:name="@string/sound_two"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/custom_pink"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/button_sound_three"
            app:layout_constraintStart_toEndOf="@+id/button_sound_one"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight=".5"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/link_description"
                android:src="@drawable/custom_playbutton"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:fontFamily="@font/roboto_black"
                android:text="@string/sound_two"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_sound_three"
            android:name="@string/sound_three"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/custom_blue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight=".5"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/link_description"
                android:src="@drawable/custom_playbutton"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:fontFamily="@font/roboto_black"
                android:text="@string/sound_three"
                android:textColor="@color/black" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>