<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:textColor="@color/black"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <android.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:contentInsetStart="0dp"
        android:layout_marginStart="-5dp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/logo"
                android:paddingTop="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:content="@string/app_name"
                tools:text="@string/app_name"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_black"
                android:gravity="center_vertical"
                android:textSize="20sp"/>
        </LinearLayout>
    </android.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">
            <TextView
                tools:text="@string/main_title"
                style="@style/titleStyle" />

            <TextView
                android:layout_width="250dp"
                android:text="@string/intro_text"
                style="@style/main_text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                tools:text="@string/title_songs"
                style="@style/titleStyle" />

            <androidx.fragment.app.FragmentContainerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.frog.crazyfrog.SongLinks"/>
                <!-- TODO add links and things -->
        </LinearLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
