<?xml version="1.0" encoding="utf-8"?>
<layout>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SongLinks">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:name="@string/song_one"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/custom_green"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight=".5"
                android:src="@drawable/link"
                android:contentDescription="@string/link_description"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:fontFamily="@font/roboto_black"
                android:text="@string/song_one"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:name="@string/song_two"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/custom_blue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight=".5"
                android:src="@drawable/link"
                android:contentDescription="@string/link_description"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:fontFamily="@font/roboto_black"
                android:text="@string/song_two"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:name="@string/song_three"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/custom_orange"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight=".5"
                android:src="@drawable/link"
                android:contentDescription="@string/link_description" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:fontFamily="@font/roboto_black"
                android:text="@string/song_three"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:name="@string/song_four"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/custom_orange"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight=".5"
                android:src="@drawable/link"
                android:contentDescription="@string/link_description" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:fontFamily="@font/roboto_black"
                android:text="@string/song_four"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:name="@string/song_five"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/custom_green"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
            app:layout_constraintStart_toEndOf="@+id/linearLayout4"
            app:layout_constraintTop_toBottomOf="@+id/LinearLayout2">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight=".5"
                android:src="@drawable/link"
                android:contentDescription="@string/link_description" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:fontFamily="@font/roboto_black"
                android:text="@string/song_five"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:name="@string/song_six"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/custom_pink"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight=".5"
                android:src="@drawable/link"
                android:contentDescription="@string/link_description"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:fontFamily="@font/roboto_black"
                android:text="@string/song_six"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>